<?xml version="1.0" encoding="utf-8"?>
<!--
这个文件是SwiFTP的一部分。

SwiFTP是免费的软件：你可以重新分配和/或修改
它根据GNU通用公共许可证条款发布
自由软件基金会，版本3的许可证，或者
（可选）任何更新的版本。

SwiFTP是分发的，希望它会有用，
但没有任何担保; 甚至没有隐含的保证
适销性或针对特定用途的适用性。 看到了
GNU通用公共许可证更多细节。
-->

<PreferenceScreen android:key="preference_screen" xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:key="running_switch"
        android:title="@string/running_label"
        android:summary="@string/running_summary_stopped"
        android:defaultValue="false" />
    <Preference
        android:key="market_version"
        android:summary="@string/market_version_summary"
        android:title="@string/market_version_label" />

    <PreferenceCategory
        android:key="settings"
        android:title="@string/settings_label" >

        <PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:key="login"
            android:title="@string/loginsettings_label"
            android:summary="" >
           <PreferenceCategory
               android:key="settings"
               android:title="@string/user_label" >
                <EditTextPreference
                    android:defaultValue="@string/username_default"
                    android:key="username"
                    android:title="@string/username_label" />
                <EditTextPreference
                    android:defaultValue="@string/password_default"
                    android:key="password"
                    android:title="@string/password_label"
                    android:inputType="textPassword" />
                <CheckBoxPreference
                    android:key="show_password"
                    android:title="@string/show_password_label"
                    android:defaultValue="@string/show_password_default" />
           </PreferenceCategory>
           <PreferenceCategory
               android:key="settings"
               android:title="@string/anonymous_label" >
                <CheckBoxPreference
                    android:key="allow_anonymous"
                    android:title="@string/allow_anonymous_label"
                    android:summary="@string/anonymous_summary"
                    android:defaultValue="@string/allow_anonymous_default" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:title="@string/advancedsettings_label" >
            <EditTextPreference
                android:defaultValue="@string/portnumber_default"
                android:key="portNum"
                android:title="@string/portnumber_label" />
            <EditTextPreference
                android:defaultValue="@string/chroot_default"
                android:key="chrootDir"
                android:title="@string/chroot_label" />

            <CheckBoxPreference
                android:defaultValue="@string/wakelock_default"
                android:key="stayAwake"
                android:title="@string/wakelock_label" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="extra_category"
        android:title="@string/extra_label" >
        <Preference
            android:key="help"
            android:title="@string/help_label"
            android:id="@+id/preference" />
        <Preference
            android:key="about"
            android:title="@string/about_label" />
    </PreferenceCategory>

</PreferenceScreen>